...
            "state": "translated",
            "value": "高级"
          }
        }
      }
    },
    "Agent": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Agent"
          }
...
            "state": "translated",
            "value": "Apple ID"
          }
        }
      }
    },
    "Ask the Agent Council": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Ask the Agent Council"
          }
...
            "state": "translated",
            "value": "取消"
          }
        }
      }
    },
    "Chat": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Chat"
          }
...
            "state": "translated",
            "value": "高"
          }
        }
      }
    },
    "History": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "History"
          }
...
            "state": "translated",
            "value": "开"
          }
        }
      }
    },
    "Open Account & Sync": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Open Account & Sync"
          }
...
            "state": "translated",
            "value": "打开 Agent 设置"
          }
        }
      }
    },
    "Open Settings": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Open Settings"
          }
...
            "state": "translated",
            "value": "会话"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
...
            "state": "translated",
            "value": "分享消息"
          }
        }
      }
    },
    "Sign In to Sync History": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Sign In to Sync History"
          }
...
            "state": "translated",
            "value": "标准"
          }
        }
      }
    },
    "Start a Conversation": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Start a Conversation"
          }
...
